Added NFA for Decimal/Oct/Hex Strings ONLY