@@ -38,29 +38,51 @@ public class PythonLiteral {
 
     public static void PythonLiteralNFA() {
 
-          // Define the NFA for negative and nonzero integers
-        Set<String> states = new HashSet<>(Arrays.asList("q0", "q1", "q2"));
-        Set<Character> alphabet = new HashSet<>(Arrays.asList('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '-'));
-
-        // Define transitions
-        Map<String, Map<Set<Character>, Set<String>>> transitions = new HashMap<>();
-        transitions.put("q0", Map.of(
-            Set.of('-'), Set.of("q2"),     // From start state, '-' goes to q2 for negative integers
-            Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Positive numbers start at q1
-        ));
-        transitions.put("q2", Map.of(
-            Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Negative numbers start at q1 after '-'
-        ));
-        transitions.put("q1", Map.of(
-            Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1") // Loop on digits in q1
-        ));
-
-        // Define the start state and accept states
-        String startState = "q0";
-        Set<String> acceptStates = new HashSet<>(Arrays.asList("q1"));
-
-        // Create the NFA
-        NFA nfa = new NFA(states, alphabet, transitions, startState, acceptStates);
+         // Defining NFA for python literals (nonzero decimal, octal, and hexadecimal integers)
+         Set<String> states = new HashSet<>(Arrays.asList("q0", "q1", "q2", "q3", "q4"));
+         Set<Character> alphabet = new HashSet<>(Arrays.asList( '0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '_', 'a', 'b', 'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F', 'x', 'X'));
+ 
+         // Define transitions
+         Map<String, Map<Set<Character>, Set<String>>> transitions = new HashMap<>();
+ 
+         // q0: Start state
+         transitions.put("q0", Map.of(
+             Set.of('1', '2', '3', '4', '5', '6', '7', '8', '9', '0'), Set.of("q1"), // Positive decimal numbers start at q1
+             Set.of('0'), Set.of("q2")  // 0 goes to q2 (check for octal/hexadecimal)
+         ));
+ 
+         // q1: Positive decimal or octal numbers
+         transitions.put("q1", Map.of(
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9'), Set.of("q1"),  // Loop on decimal digits
+             Set.of('_'), Set.of("q1")  // Loop on underscores (underscore between digits)
+         ));
+ 
+         // q2: Handles the '0' for octal or hexadecimal prefix
+         transitions.put("q2", Map.of(
+             Set.of('x', 'X'), Set.of("q3"), // Transition to hexadecimal if 'x' or 'X'
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7'), Set.of("q1"),  // Transition to octal if valid octal digit
+             Set.of('_'), Set.of()  // Invalid to start with an underscore
+         ));
+ 
+         // q3: Hexadecimal number processing (after '0x' or '0X')
+         transitions.put("q3", Map.of(
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F', '_'),
+             Set.of("q4") // Transition to q4 for hexadecimal digits
+         ));
+ 
+         // q4: Hexadecimal number processing (hexadecimal digits loop)
+         transitions.put("q4", Map.of(
+             Set.of('0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f', 'A', 'B', 'C', 'D', 'E', 'F', '_'),
+             Set.of("q4") // Loop on hexadecimal digits and underscores
+         ));
+ 
+         // Define the start state and accept states
+         String startState = "q0";
+         Set<String> acceptStates = new HashSet<>(Arrays.asList("q1", "q4"));  // Accept q1 for decimal and q4 for hexadecimal
+ 
+         // Create the NFA
+         NFA nfa = new NFA(states, alphabet, transitions, startState, acceptStates);
+  
 
         /*
         // Print the NFA and test inputs
